<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/text_word"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="normal" />
    
</LinearLayout>
